# rag-core

./: .gitignore  README.md  pyproject.toml
rag_core/: __init__.py  filter.py  hashing.py  types.py
rag_core/capabilities/: __init__.py  chat_model.py  embedder.py  indexer.py  retriever.py  structured_query.py
rag_core/ingestion/: loaders.py  pipeline.py  splitter.py
rag_core/memory/: conversation.py
tests/: test_chat_model.py  test_embedder.py  test_filter.py  test_indexer.py  test_ingestion.py  test_memory.py  test_retriever.py  test_types.py
