[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite>=0.20",
    "rank-bm25>=0.2",
    "redis>=5.0",
    "structlog>=24.0",
    "langfuse>=2.50",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.10",
]
local-embedding = [
    "sentence-transformers>=3.0.0",
]
openai = [
    "langchain-openai>=0.3.0",
    "openai>=1.0",
]
anthropic = [
    "langchain-anthropic>=0.3.0",
]
ingestion = [
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=4.0",
    "docx2txt>=0.8",
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
]
all = [
    "rag-core[local-embedding,openai,anthropic,ingestion]",
]

[tool.setuptools.packages.find]
where = ["."]
